<resources>
    <string name="app_name">家庭能量管理系统</string>

    <string name="title_section1">电器管理</string>
    <string name="title_section2">能源数据</string>
    <string name="title_section3">智能优化</string>

    <string name="app1">空调</string>
    <string name="app2">冰箱</string>
    <string name="app3">电视</string>
    <string name="app4">热水器</string>
    <string name="app5">洗衣机</string>
    <string name="app6">洗碗机</string>
    <string name="app7">电动汽车</string>
    <string name="app8">其他电器</string>


    <string name="hello_world">Hello world!</string>
    <string name="kongtiaotitle">电器详细信息</string>

    <string name="electrictitle">用电信息</string>
    <string name="elechargetitle">电费详情</string>
    <string name="comforttitle">实时功率</string>
    <string name="comparetitle">费用对比</string>
    <string name="resulttitle">优化结果</string>
    <string name="Generatortitle">发电信息</string>
    <string name="monthtitle">每月统计</string>
    <string name="environmenttitle">环境监测</string>


    <string name="action_settings">退出</string>
    <string name="action_save">保存修改</string>
    <string name="action_back">返回主页</string>
    <string name="title_activity_settings">设置</string>

    <string-array name="choose_app">
        <item>@string/app1</item>
        <item>@string/app2</item>
        <item>@string/app3</item>
        <item>@string/app4</item>
        <item>@string/app5</item>
        <item>@string/app6</item>
        <item>@string/app7</item>
        <item>@string/app8</item>
        <item>总计</item>
    </string-array>

    <string-array name="month">
        <item>1月</item>
        <item>2月</item>
        <item>3月</item>
        <item>4月</item>
        <item>5月</item>
        <item>6月</item>
        <item>7月</item>
        <item>8月</item>
        <item>9月</item>
        <item>10月</item>
        <item>11月</item>
        <item>12月</item>
    </string-array>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">个人信息</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">用户名</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">关于</string>

    <string name="pref_title_sync_frequency">frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">通知</string>

    <string name="pref_title_new_message_notifications">新消息通知</string>

    <string name="pref_title_ringtone">铃声</string>
    <string name="pref_ringtone_silent">静音</string>

    <string name="pref_title_vibrate">震动</string>

    <string-array name="pref_work">
        <item>工作日模式</item>
        <item>双休日模式</item>
    </string-array>
    <string-array name="pref_work_values">
        <item>1</item>
        <item>0</item>
    </string-array>
    <string name="pref_weather">开启优化模式</string>
    <string name="pref_weather_description">可在电器管理界面中自定义参数</string>
    <string name="pref_youhua">开启控制模式</string>
    <string name="pref_youhua_description">根据优化计划自动控制智能电器</string>
    <string name="title_activity_weather">WeatherActivity</string>
    <string name="title_activity_month_acitivity">MonthAcitivity</string>
</resources>
